# tau5

./: .gitignore  BUILD-LINUX.md  BUILD-MACOS.md  BUILD-WINDOWS.md  CLAUDE.md  LICENSE  README.md
.github/: build.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
app/images/: app.icns
app/lib/: beam.cpp  beam.h
app/scripts/: win-start-server.bat
app/widgets/: phxurlinterceptor.cpp  phxwidget.cpp  phxwidget.h
docs/: ASSET_PIPELINE.md  ENV_VARS.md  mcp_devtools_config.md  mcp_gui_dev_config.md  what_is_tau5.md
gui/: CMakeLists.txt  Tau5.qrc  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  tau5-node.cpp  tau5logger.cpp  tau5logger.h
gui/devtools-mcp/: CMakeLists.txt  README.md  cdpclient.h  mcpserver_stdio.cpp  mcpserver_stdio.h  tau5_devtools_mcp.cpp
gui/fonts/: LICENSE
gui/gui-dev-mcp/: CMakeLists.txt  README.md  cdpclient.cpp  cdpclient.h  mcpserver_stdio.cpp  mcpserver_stdio.h  tau5_gui_dev_mcp.cpp
gui/gui-dev-mcp-server/: CMakeLists.txt  README.md  cdpclient.cpp  cdpclient.h  mcpserver_stdio.cpp  tau5_dev_gui_mcp_server.cpp  tau5_gui_dev_mcp_server.cpp
gui/images/: app.icns
gui/lib/: beam.cpp  beam.h  fontloader.cpp  fontloader.h
gui/shaders/: tau5-loading.frag  tau5-loading.vert
gui/shared/: CMakeLists.txt  beam.cpp  beam.h  cli_args.h  cli_help.cpp  cli_help.h  common.cpp  common.h  error_codes.h  health_check.cpp  health_check.h  qt_message_handler.cpp  qt_message_handler.h  server_info.cpp  server_info.h  tau5CoreConfig.cmake.in  tau5logger.cpp  tau5logger.h  test_cli_args.cpp  test_cli_args.h
gui/shortcuts/: ShortcutManager.cpp  ShortcutManager.h
gui/spectra/: CMakeLists.txt  README.md  cdpclient.cpp  cdpclient.h  mcpserver_stdio.cpp  tau5_spectra.cpp  tidewaveproxy.cpp  tidewaveproxy.h
gui/styles/: StyleManager.cpp  StyleManager.h  tau5-dashboard-theme.css
gui/widgets/: consoleoverlay.cpp  consoleoverlay.h  consolewidget.cpp  consolewidget.h  controllayer.cpp  controllayer.h  customtitlebar.cpp  customtitlebar.h  debugpane.cpp  debugpane.h  debugwidget.cpp  debugwidget.h  devwebview.cpp  devwebview.h  loadingoverlay.cpp  loadingoverlay.h  logfilemanager.cpp  logfilemanager.h  logwidget.cpp  logwidget.h  mainphxwidget.cpp  mainphxwidget.h  phxurlinterceptor.cpp  phxurlinterceptor.h  phxwebview.cpp  phxwebview.h  phxwidget.cpp  phxwidget.h  sandboxedwebview.cpp  sandboxedwebview.h  shadercode.h  shaderpage.cpp  shaderpage.h  tau5devbridge.cpp  tau5devbridge.h  terminalpane.cpp  terminalpane.h  transitionoverlay.cpp  transitionoverlay.h
gui/widgets/debugpane/: CMakeLists.txt  activitytabbutton.cpp  activitytabbutton.h  animationcontrol.cpp  animationcontrol.h  buttonutilities.cpp  buttonutilities.h  customsplitter.cpp  customsplitter.h  iconutilities.cpp  iconutilities.h  resizedragcontrol.cpp  resizedragcontrol.h  searchfunctionality.cpp  searchfunctionality.h  tabswitcher.cpp  tabswitcher.h  themestyles.cpp  themestyles.h  zoomcontrol.cpp  zoomcontrol.h
installer/wix/: LICENSE.rtf  build-installer.bat  tau5.wxs
server/: .gitignore  README.md  mix.exs
server/assets/: tailwind.config.js
server/assets/css/: app.css  console.css  lua_shell.css  tau5_console.css  theme.css  tiled_layout.css
server/assets/js/: app.js  hydra_standalone.js
server/assets/js/lib/: monaco_hook.js  supersonic_demo.js  supersonic_tau5.js  tau5_editor.js  tau5_hydra.js  tau5_monaco_config.js  tau5_shader.js
server/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
server/etc/: exqlite_CMakeLists.txt
server/lib/: tau5.ex  tau5_mcp.ex  tau5_web.ex
server/lib/mix/tasks/: nifs.clean.ex  nifs.compile.ex  sp_nifs.clean.ex  sp_nifs.compile.ex  supersonic.deploy.ex
server/lib/tau5/: application.ex  config_repo.ex  config_repo_migrator.ex  discovery.ex  heartbeat.ex  kill_switch.ex  layout.ex  link.ex  lua_evaluator.ex  mailer.ex  mcp_activity_logger.ex  midi.ex  monaco_editor.ex  paths.ex  port_finder.ex  public_endpoint.ex  secure_config.ex  settings.ex  startup_info.ex  tiled_layout.ex
server/lib/tau5/discovery/: ack_receiver.ex  broadcast_supervisor.ex  broadcaster.ex  known_nodes.ex  network_interface_watcher.ex  receiver.ex  receiver_supervisor.ex  server.ex  server_supervisor.ex
server/lib/tau5/settings/: app_setting.ex
server/lib/tau5_mcp/: activity_logger.ex  lua_evaluator.ex  server.ex
server/lib/tau5_web/: access_tier.ex  endpoint.ex  gettext.ex  mcp_endpoint.ex  mcp_router.ex  public_endpoint.ex  router.ex  telemetry.ex
server/lib/tau5_web/components/: core_components.ex  layouts.ex
server/lib/tau5_web/controllers/: central_controller.ex  central_html.ex  error_html.ex  error_json.ex  health_controller.ex  mcp_fallback_controller.ex  page_controller.ex  page_html.ex
server/lib/tau5_web/hooks/: access_tier_hook.ex
server/lib/tau5_web/live/: console_live.ex  lua_shell_live.ex  main_live.ex
server/lib/tau5_web/plugs/: access_tier.ex  caching_body_reader.ex  conditional_tidewave.ex  conditional_tidewave_mcp.ex  console_security.ex  cross_origin_isolation.ex  friend_authentication.ex  internal_endpoint_security.ex  public_access_control.ex  require_desktop_mode.ex  require_internal_endpoint.ex  tidewave_logger.ex
server/lib/tidewave_mcp/: activity_logger.ex
server/priv/config_repo/migrations/: 20250612140548_init.exs
server/priv/static/: hydra.html
server/priv/static/shaders/: tau5-loading-mobile.frag  tau5-loading.frag
server/rel/: remote.vm.args.eex
server/src/: sp_link.erl  sp_midi.erl
server/test/: test_helper.exs  zz_debug_shutdown_test.exs
server/test/support/: conn_case.ex
server/test/tau5/: config_test.exs  lua_evaluator_test.exs  meaningful_config_test.exs  port_finder_test.exs  public_endpoint_test.exs  security_audit_test.exs
server/test/tau5_web/: mcp_security_test.exs
server/test/tau5_web/controllers/: central_controller_test.exs  error_html_test.exs  error_json_test.exs  page_controller_test.exs
server/test/tau5_web/live/: console_live_test.exs
server/test/tau5_web/plugs/: access_tier_test.exs  console_security_test.exs  (+5 more)
(+11 files in other folders)
